--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,42 +7,81 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="180dp"
-        android:text="이름을 입력하시오"
-        android:textSize="20sp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="265dp"
+        android:layout_marginEnd="296dp"
+        android:text="아이디"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/et_name"
-        android:layout_width="150dp"
+        android:id="@+id/et_password"
+        android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginStart="185dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="186dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
         android:gravity="center|center_vertical"
-        android:hint="이름"
+        android:hint="비밀번호"
+        android:textSize="26sp"
+        app:layout_constraintStart_toEndOf="@+id/tv_password"
+        app:layout_constraintTop_toBottomOf="@+id/et_id" />
+
+    <EditText
+        android:id="@+id/et_id"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="48dp"
+        android:gravity="center|center_vertical"
+        android:hint="아이디"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+        app:layout_constraintStart_toEndOf="@+id/tv_id"
+        app:layout_constraintTop_toBottomOf="@+id/tv_signup" />
+
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="296dp"
+        android:text="비밀번호"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_id" />
 
     <Button
         android:id="@+id/btn_login"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="126dp"
+        android:text="로그인"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_password" />
+
+    <TextView
+        android:id="@+id/tv_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="107dp"
         android:layout_marginEnd="162dp"
         android:text="로그인"
+        android:textColor="#E91E63"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
