--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -101,7 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_signup" />
 
     <Button
-        android:id="@+id/btn_signup"
+        android:id="@+id/btn_login"
         android:layout_width="160dp"
         android:layout_height="70dp"
         android:layout_marginStart="125dp"
